--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -19,7 +19,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"/Users/imac/Desktop/Build/WabglBuild2;/Users/imac/Desktop/Uno wabGl/WabglBuild;/Users/imac/Desktop/Uno wabGl/WebGL Builds;;;;;;;\"}"
+                "value": "{\"m_Value\":\"/Users/imac/Desktop/Build/WebGl-build2/WebGl-build;/Users/imac/Desktop/Build/WabglBuild2;/Users/imac/Desktop/Uno wabGl/WabglBuild;/Users/imac/Desktop/Uno wabGl/WebGL Builds;;;;;;\"}"
             }
         ]
     }
